@@ -1,0 +1,2 @@
+compose:
+	docker compose -f ./development/docker-compose.yaml up -d
